--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GrammieGram</string>
+    <string name="base_url">https://grammiegram.com/api/</string>
     <string name="rv_example_text">Example Board</string>
     <string name="loading_text">Fetching Data &#8230;</string>
     <string name="wifi_error">WiFi Not Found</string>
