--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="settings_menu">Settings</string>
     <string name="logout_menu">Log Out</string>
     <string name="retry_btn">Retry</string>
+    <string name="title_activity_board">BoardActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
