--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="loading_text">Fetching Data &#8230;</string>
     <string name="wifi_error">WiFi Not Found</string>
     <string name="server_error">We are having difficulty fetching data at the moment.\nPlease try again later.</string>
+    <string name="no_account"><a href="https://grammiegram.com/signup">No account? Sign up!</a></string>
 </resources>
