--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,12 @@
     <string name="rv_item_explination">View Board for:</string>
     <string name="loading_text">Fetching Data&#8230;</string>
     <string name="wifi_error">WiFi Not Found</string>
-    <string name="server_error">We are having difficulty fetching data at the moment.\nPlease try again later.</string>
+    <string name="server_error">Error Fetching Data</string>
     <string name="settings_menu">Settings</string>
     <string name="logout_menu">Log Out</string>
     <string name="retry_btn">Retry</string>
-    <string name="title_activity_board">BoardActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="no_boards">You Have No Boards</string>
 
     <!-- Strings related to login -->
     <string name="username_hint">Username</string>
