--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,10 @@
         completions."
     </string>
     <string name="no_account"><a href="https://grammiegram.com/signup">No account? Sign up!</a></string>
+
+    <!-- Board activity and fragment stings -->
+    <string name="no_grams">You have no messages.</string>
+    <string name="date">The date is %1$s</string>
+    <string name="time">The time is %1$s</string>
+    <string name="logo_content_desc">GrammieGram Logo</string>
 </resources>
