--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="date">The date is %1$s</string>
     <string name="time">The time is %1$s</string>
     <string name="logo_content_desc">GrammieGram Logo</string>
+    <string name="from">Message from %1$s %2$s</string>
 
 </resources>
